feat:增加 header&footer

--- a/views/product.hbs
+++ b/views/product.hbs
@@ -7,7 +7,7 @@
     <img class="img-responsive center-block mb-5" src="{{product.image}}" style="width: 250px; transition: opacity 0.5s; opacity:0;" onload="this.style.opacity=1;">
     <div class="well">
       <ul class="list-unstyled">
-        <li><strong>Price:</strong> {{product.price}}</li>
+        <li><strong>Price: $</strong> {{product.price}}</li>
       </ul>
     </div>
   </div>
