--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark px-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">makeup web</a>
-      {{!-- {{#if user}}
+      {{#if user}}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
             </li>
           </ul>
         </div>
-      {{/if}} --}}
+      {{/if}}
     </div>
   </nav>
 </header>
