--- a/views/product.hbs
+++ b/views/product.hbs
@@ -20,6 +20,11 @@
 {{!-- Comment --}}
 <h3 class="mb-3">所有評論：</h3>
 {{#each product.Comments}}
+  {{#ifCond this.User.id ../user.id}}
+    <form action="/comments/{{this.id}}?_method=DELETE" method="POST" class="float-end">
+      <button type="submit" class="btn btn-danger">Delete</button>
+    </form>
+  {{/ifCond}}
   <blockquote class="blockquote mb-0">
     <h4><a href="/users/{{this.User.id}}">{{this.User.name}}</a></h4>
     <p>{{this.text}}</p>
