--- a/views/product.hbs
+++ b/views/product.hbs
@@ -13,6 +13,15 @@
   </div>
   <div class="col-md-8">
     <p style="white-space: break-spaces;">{{product.description}}</p>
+    {{#if isFavorited }}
+      <form action="/favorite/{{product.id}}?_method=DELETE" method="POST" style="display: contents;">
+        <button type="submit" class="btn btn-danger">移除最愛</button>
+      </form>
+    {{else}}
+      <form action="/favorite/{{product.id}}" method="POST" style="display: contents;">
+        <button type="submit" class="btn btn-primary">加到最愛</button>
+      </form>
+    {{/if}}
   </div>
   <hr>
 </div>
