--- a/views/products.hbs
+++ b/views/products.hbs
@@ -35,8 +35,13 @@
 <nav class="mt-3" aria-label="page navigation">
   <ul class="pagination flex-wrap">
     <li class="page-item {{#ifCond pagination.currentPage 1}}disabled{{/ifCond}}">
-      <a class="page-link" href="/products?page={{pagination.prev}}" aria-label="Previous">
+      <a class="page-link" href="/products?page={{pagination.first}}" aria-label="First">
         <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li class="page-item {{#ifCond pagination.currentPage 1}}disabled{{/ifCond}}">
+      <a class="page-link" href="/products?page={{pagination.prev}}" aria-label="Previous">
+        <span aria-hidden="true">&lsaquo;</span>
       </a>
     </li>
     {{#each pagination.pages}}
@@ -50,6 +55,11 @@
     {{/each}}
     <li class="page-item {{#ifCond pagination.currentPage pagination.totalPage}}disabled{{/ifCond}}">
       <a class="page-link" href="/products?page={{pagination.next}}" aria-label="Next">
+        <span aria-hidden="true">&rsaquo;</span>
+      </a>
+    </li>
+    <li class="page-item {{#ifCond pagination.currentPage pagination.totalPage}}disabled{{/ifCond}}">
+      <a class="page-link" href="/products?page={{pagination.last}}" aria-label="Last">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
